# desk

./: 1  PROJECT_OVERVIEW.md  fancycursor.cpp  flake.nix  log  meson.build  tags  test_click.py  wlroots.rev
src/: aux.c  aux.h  config.h  desk.c  events.c  events.h  imports.h  keyboard.c  keyboard.h  layer.c  layer.h  macro.c  macro.h  main.c  meson.build  output.c  output.h  server.c  server.h  shader.c  shader.h  state.h  test.c  tiny.c  view.c  view.h  window.c  window.h
src/events/: monitor.c
src/shader/: cursor_frag.glsl  cursor_vert.glsl  cursor_vert.glsl~  debug_frag.glsl  debug_vert.glsl  frag.glsl  frag_external.glsl  frag_flat.glsl  vert.glsl  vert_flat.glsl
temp/: main.c  temp.c  test.c  tiny.c
